Mon Oct 24 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.12

	* pokernetwork/pokerserver.py (PokerService.sessionEnd,sessionStart): session records
	  for each player.
	  (PokerAvatar.logout): start session
	  (PokerAvatar.login): end session
	  (PokerService.cleanUp): crash recovery wipe out bots information and make non closed
	  session history.

	* database/1.0.11-1.0.12.sql: session and session_history tables

	* pokerui/pokerrenderer.py (PokerRenderer.queryLobby): only query lobby if protocol is 
	  active

Fri Oct 21 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/client.py (UGAMEClientProtocol.ping_delay,setPingDelay,getPingDelay): data member
	(UGAMEClientProtocol.ping): send a PACKET_PING to the other side if nothing was sent within
	ping_delay seconds.

	* pokernetwork/pokerclient.py (PokerClientProtocol.protocolEstablished): call base function
	  and set the ping time according to configuration
	  (PokerClientFactory.__init__): get ping time from settings file

	* pokernetwork/server.py: keepalive logic, server side

	* upgrades/poker.{client,server,bot}/1.0.11-1.0.12.xsl: ping interval

Wed Oct 19 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/upgrade.py (Constants.RSYNC): -z3

	* pokerweb/pages/class.poker.php: memorize serial and twisted_session within the
	  class.

Tue Oct 18 2005  Loic Dachary  <loic@gnu.org>

	* upgrades/poker.server/1.0.11-1.0.12.xsl: Game start negotiations allows to triple the delays

	* pokernetwork/pokerclient.py (PokerClientFactory.__del__): dont delete games 
	  attribute if it does not exist.

	* pokerui/pokeranimation.py (PokerAnimationScheduler.__init__): cache chips values
	  for use by derived classes

	* database/1.0.11-1.0.12.sql: change money values according to units.

Mon Oct 17 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerserver.py (PokerService.spawnTourney): set the userdata when tournament
	  table is filled.
